src/main/java/com/example/demo/common/error/ErrorMessage.java
package com.example.demo.common.error;

import org.springframework.http.HttpStatus;

public enum ErrorMessage {
    VALIDATION_FAILED(HttpStatus.BAD_REQUEST),
    UNAUTHORIZED(HttpStatus.UNAUTHORIZED),
    CONFLICT(HttpStatus.CONFLICT),
    NOT_FOUND(HttpStatus.NOT_FOUND),
    INTERNAL_ERROR(HttpStatus.INTERNAL_SERVER_ERROR);

    private final HttpStatus status;

    ErrorMessage(HttpStatus status) {
        this.status = status;
    }

    public HttpStatus getStatus() {
        return status;
    }
}
